<resources>
    <string name="app_name">My Application</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="log_in">Log in</string>
    <string name="save"> Save</string>
    <string name="heightFoot">Height in Feet</string>
    <string name="weight">Weight in Lbs</string>
    <string name="heightInches">Height in Inches</string>
    <string name="height">Height</string>
    <string name="heightFI">Height(F\'I\")</string>
    <string name="history">BMI history</string>
    <string name="enter_user_name">Enter User Name</string>
    <string name="search">Search</string>
    <string name="bmi">BMI</string>
    <string name="username_is_first_name">Username is First Name</string>
</resources>